# untangle-rs

./: Cargo.toml  Makefile  README.md  pyproject.toml  test.py
.cargo/: config.toml
.github/workflows/: CI.yml
crates/untanglers-core/: Cargo.toml
crates/untanglers-core/src/: aggregation.rs  crossings.rs  error.rs  hierarchy.rs  hierarchy_optimizer.rs  layout_optimizer.rs  lib.rs  main.rs  mapping.rs  optimizer.rs  optimizer_ops.rs  pairwise.rs  reducer.rs  swap_nodes.rs  utils.rs
crates/untanglers-core/src/utils/: mod.rs
crates/untanglers-py/: Cargo.toml  untanglers.pyi
crates/untanglers-py/src/: lib.rs
docs/: draw_graphs.py
src/: crossings.rs  lib.rs  main.rs  untanglers.pyi  utils.rs
src/utils/: mod.rs
tests/: benchmark.py  crossings.py  test_crossings.py  utils.py
