[package]
name = "untanglers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "untanglers"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
matrixmultiply = "0.3.10"
pyo3 = "0.25.0"
rand = "0.9.2"

[lints.clippy]
doc_lazy_continuation = "allow"
